--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@
 }
 
 h1{
+    text-shadow: 1px 1px black;
+    text-decoration: underline;
+    text-decoration-thickness:3px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -52,4 +55,30 @@ h1{
 .btn:active{
     background-color: red;
     transition:0s
+}
+
+#scoreboards{
+    display:flex;
+    justify-content: center;
+    height: 200px;
+    gap: 20px;
+}
+
+.Score{
+    background-color: skyblue;
+    width:200px;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0px 0px 2px 2px black
+}
+
+p{
+    color:red;
+    font-size:x-large;
+    justify-content: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+h2{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration-line:underline;
 }
